# mowrow_camera_processing

./: CMakeLists.txt  LICENSE  README.MD  install_librealsense.sh  package.xml  setup.sh
Studienarbeit_19_20/: README.MD
Studienarbeit_19_20/src/depth_detection/: README.md
Studienarbeit_19_20/src/depth_detection/include/depth_detection/: depth_detection.h
Studienarbeit_19_20/src/depth_detection/src/: depth_detection.cpp
Studienarbeit_20_21/NoiseFilter/: NoiseFilter.sln
Studienarbeit_20_21/NoiseFilter/NoiseFilter/: NoiseFilter.cpp  NoiseFilter.h  NoiseFilter.vcxproj  NoiseFilter.vcxproj.filters
Studienarbeit_20_21/NoiseFilter/NoiseFilter/x64/Debug/: NoiseFilter.exe.recipe  vc142.idb
Studienarbeit_20_21/NoiseFilter/x64/Debug/: NoiseFilter.ilk
Studienarbeit_20_21/PersonProcessing/: PersonProcessing.sln
Studienarbeit_20_21/PersonProcessing/PersonProcessing/: Person.cpp  Person.h  PersonProcessing.cpp  PersonProcessing.vcxproj  PersonProcessing.vcxproj.filters  Pixel.cpp  Pixel.h  Processing.cpp  Processing.h
Studienarbeit_20_21/PersonProcessing/PersonProcessing/x64/Debug/: PersonProcessing.exe.recipe  (+1 more)
Studienarbeit_20_21/PersonProcessing/x64/Debug/: PersonProcessing.ilk
Studienarbeit_20_21/PictureMerge/PictureMerge/: PictureMerge.sln
Studienarbeit_20_21/PictureMerge/PictureMerge/PictureMerge/: PictureMerge.cpp  PictureMerge.h  PictureMerge.vcxproj  PictureMerge.vcxproj.filters
launch/: depth_detection.launch
src/: depth_detection.cpp
src/depth_detection/include/depth_detection/: depth_detection.h
src/depth_detection/src/: depth_detection.cpp
(+25 files in other folders)
